# rust-api-picpay

./: Cargo.toml  README.md
migrations/: 20240319192534_users.sql
src/: lib.rs  main.rs
src/controllers/: mod.rs  transaction_controller.rs  user_controller.rs
src/domain/: mod.rs
src/domain/appstate/: appstate.rs
src/domain/authorizer/: authorizer.rs  mod.rs
src/domain/notification/: notification.rs
src/domain/transaction/: transaction.rs
src/domain/user/: mod.rs  user.rs  user_query.rs
src/infrastructure/: database.rs  router.rs
src/repositories/: user_repository.rs
src/services/: authorizer_service.rs  mod.rs  notification_service.rs  transaction_service.rs  user_service.rs
